# ai-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gateway.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: anthropic.rs  cache.rs  client.rs  error.rs  guardrails.rs  lib.rs  metering.rs  openai.rs  request.rs  response.rs  router.rs
crates/cache/: Cargo.toml
crates/cache/src/: local.rs  redis.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: main.rs  metrics.rs  request.rs  routes.rs  tls.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: auth.rs  lib.rs  rate_limit.rs  telemetry.rs  tracing.rs
grafana/: dashboard.json
