[workspace]
resolver = "2"
members = [
    "crates/gateway-core",
    "crates/adapters",
    "crates/middleware",
    "crates/cache",
    "crates/config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", default-features = false, features = ["http-proto", "reqwest-client"] }
jsonwebtoken = "9"
governor = "0.6"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
http = "1"
http-body-util = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
regex = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
prometheus = { version = "0.13", features = ["process"] }
notify = "6"
