[package]
name = "adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true

cache = { path = "../cache" }
