[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true

adapters = { path = "../adapters" }
middleware = { path = "../middleware" }
cache = { path = "../cache" }
config = { path = "../config" }
