[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
hyper.workspace = true
hyper-util.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx.workspace = true

adapters = { path = "../adapters" }
middleware = { path = "../middleware" }
cache = { path = "../cache" }
config = { path = "../config" }
